syntax = "proto3";

package berkeleychat;

service Berkeleychat {
  rpc UploadPhoto(UploadPhotoRequest) returns (UploadPhotoResponse) {}
  rpc UploadAudio(UploadAudioRequest) returns (UploadAudioResponse) {}

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}

  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}

  rpc GetMessages(GetMessagesRequest) returns (stream Message) {}

  rpc SendMessage(Message) returns (Message) {}
}


message UploadPhotoRequest {
  string access_token = 1;
  bytes photo = 2;
}

message UploadPhotoResponse {
  string photo_url = 1;
}

message UploadAudioRequest {
  string access_token = 1;
  bytes audio = 2;
}

message UploadAudioResponse {
  string audio_url = 1;
}

message CreateAccountRequest {
  string access_token = 1;
  string email = 2;
  string name = 3;
  string profile_photo_url = 4;
  string major = 5;
  repeated string courses = 6;
  string intro_url = 7;
}

message CreateAccountResponse {
}

message GetUsersRequest {
  string email = 1;
  string major = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string email = 1;
  string name = 2;
  string profile_photo_url = 4;
  string major = 5;
  repeated string courses = 6;
  string intro_url = 7;
  repeated string messages = 8;
}

message GetMessagesRequest {
  string email = 1;
}



message Message {
  string to_email = 1;
  string from_email = 2;
  string content = 3;
}


// message GetPostsRequest {}

// message GetPostsResponse {
//   message Post {
//     string user_id = 1;
//     string post_id = 2;
//     string content = 3;
//   }

//   repeated Post posts = 1;
// }

// message CreatePostRequest {
//   string content = 1;
// }

// message CreatePostResponse {
//   string post_id = 1;
// }
